[gd_scene load_steps=3 format=3 uid="uid://cfjjrgft2srax"]

[ext_resource type="Script" uid="uid://c1ihfcxf1jkgy" path="res://scripts/main.gd" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://cdua1s78ovukl" path="res://scripts/map_generator.gd" id="1_ig7tw"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0xm2m")

[node name="MapGenerator" type="Node" parent="."]
script = ExtResource("1_ig7tw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.16565639, 0.16565642, 0.16565639, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RegenerateMapButton" type="Button" parent="CanvasLayer"]
anchors_preset = -1
offset_left = 42.0
offset_top = 591.0
offset_right = 177.0
offset_bottom = 622.0
text = "Regenerate Map"

[node name="RerenderMapButton" type="Button" parent="CanvasLayer"]
anchors_preset = -1
offset_left = 191.0
offset_top = 592.0
offset_right = 323.0
offset_bottom = 623.0
text = "Rerender Map"

[node name="MapTexture" type="TextureRect" parent="CanvasLayer"]
unique_name_in_owner = true
texture_filter = 1
anchors_preset = -1
offset_left = 81.0
offset_top = 188.0
offset_right = 456.0
offset_bottom = 563.0

[node name="GenTexture" type="TextureRect" parent="CanvasLayer"]
unique_name_in_owner = true
texture_filter = 1
anchors_preset = -1
offset_left = 727.0
offset_top = 273.0
offset_right = 767.0
offset_bottom = 313.0

[connection signal="pressed" from="CanvasLayer/RegenerateMapButton" to="." method="_regenerate_map"]
[connection signal="pressed" from="CanvasLayer/RerenderMapButton" to="." method="_rerender"]
